# fastapi-wallet-project

./: .env.sample  .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: database.py  settings.py
migrations/models/: 1_20240727182818_initial.py
nginx/: nginx.conf
tests/: conftest.py
users/: auth.py  database.py  main.py  models.py  routers.py  schemas.py  services.py  validators.py
users/migrations/users/: 4_20240724130128_None.py
wallet/: crud.py  database.py  models.py  routers.py  schemas.py  validators.py
