[tool.poetry]
name = "fastapi-wallet-project"
version = "0.1.0"
description = ""
authors = ["egor <ega.nik5674@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.1"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.5"}
aerich = "^0.7.2"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"



[tool.aerich]
tortoise_orm = "wallet.database.DATABASE_CONFIG"
location = "./wallet/migrations/"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
